# SFML-GameCore-2D

./: .gitignore  CMakeLists.txt  configure.sh
cmake/: ExternalHana.cmake  ExternalHitboxBuilder.cmake  ExternalPlayRho.cmake  ExternalTaskManager.cmake  Flags.cmake  ResolveBox2d.cmake  ResolveHana.cmake  ResolveHitboxBuilder.cmake  ResolvePlayRho.cmake  ResolveSFML.cmake  ResolveTaskManager.cmake  Sources.cmake
config/: Game.cfg
example/: main.cpp
include/: Action.hpp  Actions.hpp  Core.hpp  GameConstant.hpp  TaskManager.hpp  Tile.hpp  Util.hpp
include/app/command/: CommandDispatcher.hpp  CommandHandler.hpp  EntityCommands.hpp
include/app/service/: ServiceFactory.hpp
include/app/service/detail/: EntityService.hpp  ServiceImpl.hpp
include/configParser/: BindModule.hpp  Parser.hpp  ParsingModule.hpp
include/configParser/detail/: BindModule.hpp
include/hitbox/: BoundingBoxBuilder.hpp  ContourBuilder.hpp  Manager.hpp  PolygonBuilder.hpp  PolygonPartitioner.hpp  Triangulator.hpp
include/hitbox/detail/: BoundingBoxBuilder.hpp  ContourBuilder.hpp  CoordinateTransformer.hpp  PolygonBuilder.hpp  PolygonPartitioner.hpp  Triangulator.hpp
include/input/: ActionDispatcher.hpp  ActionHandler.hpp  Dispatcher.hpp  KeyMapper.hpp  KeyStateRecorder.hpp  Manager.hpp
include/input/detail/: ActionDispatcher.hpp  KeyMapper.hpp  KeyStateRecorder.hpp
include/ressource/: Manager.hpp  TileManager.hpp
include/util/: EnumCast.hpp
include/world/: Camera.hpp  ContactDispatcher.hpp  ContactHandler.hpp  ContactListener.hpp  ContactResolver.hpp  Core.hpp  Grid.hpp  WorldConstant.hpp
include/world/contact/: ContactListener.hpp
include/world/contact/detail/: ContactHandler.hpp  ContactResolver.hpp
include/world/entity/: Ball.hpp  Entity.hpp  EntityId.hpp  EntityManager.hpp  Factory.hpp  Movable.hpp  Player.hpp  Types.hpp  Wall.hpp
include/world/physic/: CollisionBody.hpp  CollisionTester.hpp  Polygon.hpp
maps/: TestMap.map
src/: Core.cpp
src/app/service/: ServiceFactory.cpp
src/app/service/detail/: EntityService.cpp
src/configParser/: Parser.cpp
src/hitbox/: BoundingBoxBuilder.cpp  ContourBuilder.cpp  Manager.cpp  PolygonBuilder.cpp  PolygonPartitioner.cpp  Triangulator.cpp
src/hitbox/detail/: BoundingBoxBuilder.cpp  ContourBuilder.cpp  CoordinateTransformer.cpp  PolygonBuilder.cpp  PolygonPartitioner.cpp  Triangulator.cpp
src/input/: KeyStateRecorder.cpp
src/input/detail/: KeyStateRecorder.cpp
src/ressource/: TileManager.cpp
src/world/: Camera.cpp  ContactDispatcher.cpp  ContactHandler.cpp  ContactListener.cpp  ContactResolver.cpp  Core.cpp  Grid.cpp
src/world/contact/: ContactListener.cpp
src/world/contact/detail/: ContactHandler.cpp  ContactResolver.cpp
src/world/entity/: Ball.cpp  Entity.cpp  EntityManager.cpp  Factory.cpp  Movable.cpp  Player.cpp  Wall.cpp
src/world/physic/: CollisionBody.cpp  Polygon.cpp
